5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1807_2565.log
== SUBMITION (2019-06-11 15:54:41) 
-- CODE:
from numpy import *
a = array(
b = array(
c=int(input("carga: "))
v=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	elif(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	else:
		v[2]=v[2]+1
print(v)		
-- EXECUTION TIME:
0.626294
-- ERROR:
  File "/home/codebench/codes/1807/2565/main.py", line 5
    v=zeros(3, dtype=int)
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:55:25) 
-- CODE:
from numpy import *
a = array(eval(input())
b = array(eval(input())
c=int(input("carga: "))
v=zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	elif(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	else:
		v[2]=v[2]+1
print(v)
-- EXECUTION TIME:
0.833283
-- ERROR:
  File "/home/codebench/codes/1807/2565/main.py", line 3
    b = array(eval(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:55:40) 
-- CODE:
from numpy import *
a = array(eval(input())
b = array(eval(input())
c = int(input("carga: "))
v = zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	elif(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	else:
		v[2]=v[2]+1
print(v)
-- ERROR:
File "XXXX", line 3
    b = array(eval(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:55:51) 
-- CODE:
from numpy import *
a = array(eval(input()))
b = array(eval(input()))
c = int(input("carga: "))
v = zeros(3, dtype=int)
for i in range(size(a)):
	if(a[i]>=5 and b[i]>= 0.75*c):
		v[0]=v[0]+1
	elif(a[i]<5 and b[i]>=0.75*c):
		v[1]=v[1]+1
	else:
		v[2]=v[2]+1
print(v)
-- EXECUTION TIME:
1.28522
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
